--- a/client.html
+++ b/client.html
@@ -3,7 +3,10 @@
         <style type="text/css">
             #canvas {
                 width: 100%;
-                height: 90vh;
+                height: 100%;
+            }
+            body {
+                margin: 0;
             }
         </style>
     </head>
