--- a/client.html
+++ b/client.html
@@ -15,6 +15,7 @@
             <canvas id="canvas">
             </canvas>
         </div>
+        <input type="text" style="display: hidden">
         <script type="application/javascript" src="client.js"></script>
         <script type="application/javascript">
             window.addEventListener('load', function() {
