add order to match history

--- a/matchhistory.html
+++ b/matchhistory.html
@@ -37,6 +37,9 @@
                 margin-bottom: 12px;
                 font-size: 2em;
             }
+            .order { 
+                font-size: 0.5em;
+            }
         </style>
     </head>
     <body>
